# botbowl_rust

./: .gitignore  Cargo.toml  README.md
botbowl-engine/: Cargo.toml
botbowl-engine/src/: bots.rs  lib.rs
botbowl-engine/src/core/: bb_errors.rs  dices.rs  game_runner.rs  gamestate.rs  mod.rs  model.rs  pathing.rs  table.rs
botbowl-engine/src/core/procedures/: any_proc.rs  ball_procs.rs  block_procs.rs  casualty_procs.rs  game_procs.rs  kickoff_procs.rs  mod.rs  movement_procs.rs  procedure_tools.rs
botbowl-engine/tests/: test_armor.rs  test_ball_handling.rs  test_block.rs  test_kickoff.rs  test_pathing.rs  test_random_bot.rs  test_touchdown.rs  testing.md
botbowl-ui/: Cargo.toml
botbowl-ui/src/: main.rs  player_drawings.rs
engine/: Cargo.toml
engine/src/: lib.rs  ui.rs
engine/src/core/: dices.rs
engine/src/core/procedures/: block_procs.rs  kickoff_procs.rs  mod.rs  procedure_tools.rs
engine/tests/: test_armor.rs  test_ball_handling.rs  testing.md
src/: lib.rs  main.rs
src/core/: bb_errors.rs  dices.rs  gamestate.rs  mod.rs  model.rs  pathing.rs  procedures.rs  table.rs  vegetables.rs
src/core/procedures/: all_procs.rs  ball_procs.rs  game_procs.rs  kickoff_procs.rs  mod.rs  movement_procs.rs
tests/: test_block.rs  test_kickoff.rs  test_pathing.rs  test_touchdown.rs
