[package]
name = "botbowl-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
rand = "0.8.4"
rand_chacha = "0.3.1"
itertools = "0.10.5"
arraystring = "0.3.0"
smallvec = { version = "1.10.0", features = ["serde"] }
color-backtrace = "0.6.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
json-patch = "1.2.0"
