[package]
name = "botbowl-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
botbowl-engine = { version = "0.1.0", path = "../botbowl-engine/" }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.25.0"
